# baseline-gl

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
baseline/: .clang-format  CMakeLists.txt
baseline/app/: CMakeLists.txt  app.cpp  app.h  search_paths.cpp  search_paths.h  trackball_state.h
baseline/draw/: CMakeLists.txt  analyzed_program.cpp  analyzed_program.h  camera.h  color.cpp  color.h  context.h  draw.cpp  draw.h  frustum.h  mesh.h  mesh_factory.cpp  mesh_factory.h  pipeline.h  primitives.cpp  primitives.h  renderable.cpp  renderable.h  renderable_factory.cpp  renderable_factory.h  shader_preprocessor.h  surface.cpp  surface.h  trackball.h  uniform_map.cpp  uniform_map.h
baseline/gl/: attribute.h  binding.h  buffer.h  framebuffer.h  name.h  primitives.cpp  primitives.h  program.h  renderbuffer.h  shader.h  texture.h  uniform.h  vertex_array.h
examples/: CMakeLists.txt  baseline01-glfw.cpp
scripts/: hooks-wrapper  init-hooks
scripts/hooks/: pre-commit-clang-format
